Allow to remove the last remaining identity on rollback

BUG: 256970