accountwizard/identity.cpp
@@ -81,7 +81,7 @@ QString Identity::identityName() const
 
 void Identity::destroy()
 {
-  m_manager->removeIdentity( m_identity->identityName() );
+  m_manager->removeIdentityForced( m_identity->identityName() );
   m_manager->commit();
   m_identity = 0;
   emit info( i18n( "Identity removed." ) );
